--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
-spring.datasource.dbcp2.max-wait-millis=10000
-spring.datasource.dbcp2.min-idle=10
-spring.datasource.dbcp2.max-idle=20
-spring.datasource.dbcp2.max-total=20
-spring.datasource.dbcp2.initial-size=10
+#spring.datasource.dbcp2.max-wait-millis=10000
+#spring.datasource.dbcp2.min-idle=10
+#spring.datasource.dbcp2.max-idle=20
+#spring.datasource.dbcp2.max-total=20
+#spring.datasource.dbcp2.initial-size=10
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bonddb
+spring.datasource.url=jdbc:mysql://localhost:3306/audit
 spring.datasource.username=root
 spring.datasource.password=123
 server.port=8080
